--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300;800&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div class="wrapper">
         <section>
-            <img src="assets/pet3.jpg" class="tiger" alt="Pet tiger">
+            <img src="https://images.unsplash.com/photo-1667262422332-9b09d4065117?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="tiger" alt="Pet tiger">
             <h1>Get Fashion</h1>
-            <img src="assets/pet2.jpg" alt="Pet dog" class="dog">
+            <img src="https://images.unsplash.com/photo-1647891941746-fe1d53ddc7a6?ixlib=rb-4.0.3&ixid=MnwxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="Pet dog" class="dog">
             <div class="content">
                 <p>
                   Shop the new fall collection of wow apparel. the hottest trends,
@@ -30,7 +30,7 @@
                     </svg>   
                 </a>
             </div>
-            <img src="assets/pet1.jpg" alt="Pet Fish" class="fish">
+            <img src="https://images.unsplash.com/photo-1490481651871-ab68de25d43d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Pet Fish" class="fish">
         </section>
     </div>
 
